  time. Bundled plugins are unchanged for the moment, but if adding other new
  plugins to an all-in-one installation, ensure they are compiled and
  installed with -O1 or help may not work. (Martin [gz])

Documentation
*************

* First tests defined for sphinx, including a new bzrlib.tests.features.sphinx
  to make the tests conditional.
  (Vincent Ladeuil)

API Changes
***********

* Added ``bzrlib.merge.PerFileMerger``, a more convenient way to write
  some kinds of ``merge_file_content`` hook functions.
  (Andrew Bennetts)
  
* `BzrDir`, `Branch`, `Repository` and `WorkingTree` now all support `user_url`,
  `user_transport`, `control_url` and `control_transport` members pointing
  respectively to the directory containing the ``.bzr`` control directory, 
  and to the directory within ``.bzr`` used for the particular component.
  All of them inherit from `ControlComponent` which provides default
  implementations.
  (Martin Pool)

* Lock methods on ``Tree``, ``Branch`` and ``Repository`` are now
  expected to return an object which can be used to unlock them. This reduces
  duplicate code when using cleanups. The previous 'tokens's returned by
  ``Branch.lock_write`` and ``Repository.lock_write`` are now attributes
  on the result of the lock_write. ``repository.RepositoryWriteLockResult``
  and ``branch.BranchWriteLockResult`` document this. (Robert Collins)

* ``Repository.refresh_data`` may now be called in a write group on
  pack-based repositories.  Older repositories will still raise an error
  in this case.  Subclasses of ``Repository`` can still override
  ``Repository._refresh_data``, but are now responsible for raising
  ``bzrlib.repository.IsInWriteGroupError`` if they do not support
  ``refresh_data`` during a write group.
  (Andrew Bennetts, #574236)

Internals
*********

* ``chk_map._bytes_to_text_key`` is now an optimized function to extract
  the (file-id, revision-id) key from a CHKInventory entry. This can