@@ -425,6 +425,10 @@ Documentation
   to make the tests conditional.
   (Vincent Ladeuil)
 
+* Added a builder/writer sphinx extension that can generate texinfo files. The
+  generated files are syntactically correct but the info navigation nodes
+  needs more work. (Vincent Ladeuil, #219334)
+
 API Changes
 ***********
 
